# grayslate

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  agents.md  audit-report.md  check.txt  check2.txt  naming-audit.md  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-lang.cjs  test-lang.js  vite.config.js
.agents/code-review/: SKILL.md
.agents/codemirror-core/: SKILL.md
.agents/csv-architecture/: SKILL.md
.agents/editor-extensions/: SKILL.md
.agents/layout-chain/: SKILL.md
.agents/memory-management/: SKILL.md
.agents/naming-architecture/: SKILL.md
.agents/search-architecture/: SKILL.md
.agents/svelte-frontend/: SKILL.md
.agents/tanstack-hotkeys/: SKILL.md
.agents/tauri-backend/: SKILL.md
.agents/transformations/: SKILL.md
.agents/typography/: SKILL.md
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-documentation.yml  config.yml
.github/workflows/: e2e.yml  publish-linux-repositories.yml  publish-packages.yml  release.yml
crates/grayslate-langdetect/: Cargo.toml  README.md
crates/grayslate-langdetect/src/: disambiguation.rs  extension.rs  family.rs  features.rs  lib.rs  scoring.rs  shebang.rs  structural.rs
crates/grayslate-langdetect/src/languages/: angular.rs  c.rs  clojure.rs  cmd.rs  cpp.rs  csharp.rs  css.rs  csv.rs  dart.rs  dockerfile.rs  email.rs  go.rs  html.rs  java.rs  javascript.rs  jinja.rs  json.rs  kotlin.rs  markdown.rs  mod.rs  nginx.rs  objectivec.rs  objectivecpp.rs  perl.rs  php.rs  powershell.rs  prompt.rs  python.rs  ruby.rs  rust_lang.rs  sass.rs  scala.rs  scss.rs  shell.rs  sql.rs  svelte.rs  swift.rs  text.rs  toml.rs  typescript.rs  (+3 more)
crates/grayslate-langnaming/: Cargo.toml  README.md
crates/grayslate-langnaming/src/: code.rs  lib.rs  markup.rs  shared.rs  sql.rs  structured.rs
crates/grayslate-langnaming/src/languages/: angular.rs  c.rs  clojure.rs  cmd.rs  cpp.rs  csharp.rs  css.rs  csv_lang.rs  dart.rs  dockerfile.rs  email.rs  go.rs  html.rs  java.rs  javascript.rs  jinja.rs  json_lang.rs  kotlin.rs  markdown.rs  mod.rs  nginx.rs  objectivec.rs  objectivecpp.rs  perl.rs  php.rs  powershell.rs  prompt.rs  python.rs  ruby.rs  rust_lang.rs  sass.rs  scala.rs  scss.rs  shell.rs  sql.rs  svelte.rs  swift.rs  text.rs  toml_lang.rs  typescript.rs  (+3 more)
docs/: distribution.md  linux-package-repository.md
draft-plans/: TRANSFORMATION_GAPS.md  code-formatters-plan.md  e2e-testing-plan.md  website-landing-page-plan.md
e2e/: README.md  tsconfig.json  wdio.conf.ts
e2e/fixtures/: external.txt  messy.json  sample.csv  sample.json  sample.md  sample.sql  unformatted.sql
e2e/helpers/: app.ts  clipboard.ts  sandbox.ts
e2e/specs/: 00-selectors-smoke.e2e.ts  01-first-run.e2e.ts  02-external-files.e2e.ts  03-language-detection.e2e.ts  04-editor-core.e2e.ts  05-formatting-indent.e2e.ts  06-transformations.e2e.ts  07-sidebar.e2e.ts  08-appearance.e2e.ts  09-markdown.e2e.ts  10-csv.e2e.ts  11-app-shell.e2e.ts  11-keyboard-shortcuts.e2e.ts  autosave-language.e2e.ts  document-authorization.e2e.ts  ipc-capabilities.e2e.ts
packaging/aur/: PKGBUILD.in
packaging/flatpak/: app.grayslate.Grayslate.yml.in
packaging/linux/: app.grayslate.Grayslate.desktop  app.grayslate.Grayslate.metainfo.xml  tauri-hidden.desktop.hbs
packaging/repository/: install.sh
scripts/package-repository/: build.mjs  fetch-releases.mjs  lib.mjs  package-repository.test.mjs  publish-r2.mjs  verify.mjs
scripts/release/: assemble-release.mjs  release-scripts.test.mjs  render-package-templates.mjs  set-version.mjs  stage-artifacts.mjs  verify-release.mjs
snap/: snapcraft.yaml
src/: app.html  icons.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/e2e-capabilities/: e2e.json
src-tauri/icons/: icon.icns
src-tauri/src/: autosave.rs  capability_tests.rs  command_names.rs  detection.rs  document.rs  filesystem.rs  findstats.rs  lib.rs  main.rs  markdown_preview.rs  naming.rs  save_coordinator.rs  storage.rs  update_policy.rs
src-tauri/src/commands/: autosave.rs  clipboard.rs  csv.rs  detection.rs  e2e.rs  external.rs  file.rs  findstats.rs  markdown.rs  memory.rs  mod.rs  naming.rs  search.rs  transform.rs  update.rs
src-tauri/src/csv/: mod.rs  mutation.rs  ops.rs  parser.rs  session.rs  types.rs
src-tauri/src/detection/: disambiguation.rs  extension.rs  family.rs  features.rs  heuristic.rs  mod.rs  scoring.rs  shebang.rs  structural.rs  treesitter.rs
src-tauri/src/detection/languages/: angular.rs  c.rs  clojure.rs  cmd.rs  cpp.rs  csharp.rs  css.rs  csv.rs  dart.rs  dockerfile.rs  email.rs  go.rs  html.rs  java.rs  javascript.rs  jinja.rs  json.rs  kotlin.rs  markdown.rs  mod.rs  nginx.rs  objectivec.rs  objectivecpp.rs  perl.rs  php.rs  powershell.rs  prompt.rs  python.rs  ruby.rs  rust_lang.rs  sass.rs  scala.rs  scss.rs  shell.rs  sql.rs  svelte.rs  swift.rs  text.rs  toml.rs  typescript.rs  (+3 more)
src-tauri/src/menu/: mod.rs
src-tauri/src/naming/: code.rs  markup.rs  mod.rs  model.rs  prose.rs  shared.rs  sql.rs  structured.rs
src-tauri/src/naming/languages/: angular.rs  c.rs  clojure.rs  cmd.rs  cpp.rs  csharp.rs  css.rs  csv_lang.rs  dart.rs  dockerfile.rs  email.rs  go.rs  html.rs  java.rs  javascript.rs  jinja.rs  json_lang.rs  kotlin.rs  markdown.rs  mod.rs  nginx.rs  objectivec.rs  objectivecpp.rs  perl.rs  php.rs  powershell.rs  prompt.rs  python.rs  ruby.rs  rust_lang.rs  sass.rs  scala.rs  scss.rs  shell.rs  sql.rs  svelte.rs  swift.rs  text.rs  toml_lang.rs  typescript.rs  (+3 more)
src-tauri/src/search/: grep.rs  mod.rs  query.rs  rank.rs  scope.rs  types.rs
src-tauri/src/window/: mod.rs
src/lib/: clipboard.ts  hotkeys.ts  ipc.ts  shortcuts.ts
src/routes/: +layout.svelte  +page.svelte  README.md  layout.css  shadcn.css
static/fonts/: README.md
tools/naming-audit/: .gitignore  README.md  audit_repos.py  compare_runs.py  metrics.py  (+3 more)
website/: README.md  astro.config.mjs  package.json
(+227 files in other folders)
