[package]
name = "Grayslate"
version = "0.1.0"
description = "A fast scratchpad for code, data, and quick thinking."
authors = ["you"]
edition = "2021"

default-run = "Grayslate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grayslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-prevent-default = "5.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dprint-plugin-jsonc = "0.7.4"
dprint-plugin-sql = "0.2.0"
jsonc-parser = { version = "0.33.0", features = ["serde"] }
serde_yaml = "0.9"
tauri-plugin-os = "2"
grayslate-langdetect = { path = "../crates/grayslate-langdetect" }
grayslate-langnaming = { path = "../crates/grayslate-langnaming" }

rusqlite = { version = "0.39.0", features = ["bundled"] }
url = "2"
csv = "1"
base64 = "0.22"
urlencoding = "2"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1"
html-escape = "0.2"
flate2 = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "v7"] }
quick-xml = "0.39"
unicode-segmentation = "1"
heck = "0.5"
regex = "1"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
pulldown-cmark = "0.13.4"
ammonia = "4"
tokio = { version = "1", features = ["time"] }
dprint-core = "0.67.4"
dprint-plugin-typescript = "0.96.1"
malva = { version = "0.16.0", features = ["config_serde"] }
markup_fmt = { version = "0.27.3", features = ["config_serde"] }
pretty_yaml = { version = "0.6.0", features = ["config_serde"] }
dprint-plugin-markdown = "0.22.1"
dprint-plugin-toml = "0.7.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
